--- a/main.css
+++ b/main.css
@@ -45,6 +45,12 @@ a:hover {
     padding: 0;
     border-bottom: 1px solid #ccc;
 }
+
+@media(max-width:1024px) {
+    .tabs {
+        flex-direction:column;
+    }
+}
 .tab > label {
     display: block;
     margin-bottom: -1px;
