--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(90deg,rgba(255, 61, 0, 1) 0%, rgba(217, 23, 114, 1) 50%);
+    background: #ff3d00;
     background-repeat: no-repeat;
     font: 400 16px/1.5em "Open Sans", sans-serif;
     height: 100%;
